# radioify

./: .gitignore  05 Respectless.m4a  BUILD_WINDOWS.md  CMakeLists.txt  CMakePresets.json  README.md  app_common.cpp  app_common.h  asciiart.cpp  asciiart.h  asciiart.hlsl  asciiart.ts  asciiart_gpu.cpp  asciiart_gpu.h  audioplayback.cpp  audioplayback.h  audioplayback_internal.h  browsermeta.cpp  browsermeta.h  build.ps1  build_windows.sh  calibration_report.cpp  clock.cpp  clock.h  consoleinput.cpp  consoleinput.h  consolescreen.cpp  consolescreen.h  crash_handler.cpp  crashdump.ps1  download_x_video.ps1  ffmpegaudio.cpp  ffmpegaudio.h  flacaudio.h  gmeaudio.cpp  gmeaudio.h  gpu_shared.cpp  gsfaudio.cpp  gsfaudio.h  install_radioify.cmd  (+80 more)
audio/: CMakeLists.txt  audio_format_options.cpp  audio_stream.cpp  audioplayback.cpp  audioplayback.h  audioplayback_internal.h  audition_worker.cpp  audition_worker.h  ffmpegaudio.cpp  flacaudio.cpp  gmeaudio.cpp  gsfaudio.cpp  kssaudio.cpp  kssoptions.h  m4adecoder.cpp  master_output_stage.cpp  master_output_stage.h  media_formats.cpp  media_formats.h  miniaudio_file_path.h  output_callback.cpp  output_transition.cpp  output_transition.h  output_volume_safety.cpp  output_volume_safety.h  pipeline_transition.cpp  pipeline_transition.h  playback_backend.cpp  playback_backend.h  playback_device.cpp  playback_device.h  playback_source_buffer.cpp  playback_source_buffer.h  playback_source_priming.cpp  playback_source_priming.h  psfaudio.cpp  psfaudio.h  queued_audio_source.cpp  queued_audio_source.h  radio.h  (+16 more)
audio/analysis/: CMakeLists.txt  calibration_report.cpp  calibration_report.h  melodyanalysiscache.cpp  melodyanalysiscache.h  neuralpitch.cpp  neuralpitch.h
audio/audiofilter/: CMakeLists.txt
audio/loopsplit/: CMakeLists.txt  loopsplit.cpp  loopsplit_cli.cpp  loopsplit_cli.h  loopsplit_ui.cpp
audio/playback_sources/: m4a_playback_source.cpp  m4a_playback_source.h
playback/: CMakeLists.txt  playback_debug_lines.h  playback_frame_refresh.h  playback_media_artwork_catalog.cpp  playback_media_artwork_catalog.h  playback_media_keys.h  playback_media_metadata_catalog.cpp  playback_media_metadata_catalog.h  playback_shortcut_types.h  playback_shortcuts.h  playback_track_catalog.cpp  playback_track_catalog.h  system_media_transport_controls.cpp  system_media_transport_controls.h  system_media_transport_host_window.cpp  system_media_transport_host_window.h
playback/ascii/: frame_output.h  frame_output_ascii.cpp  frame_output_console.cpp  playback_ascii_subtitles.cpp  playback_frame_output.h  playback_frame_output_ascii.cpp  playback_frame_output_console.cpp  playback_screen_renderer.cpp  playback_screen_renderer.h  screen_renderer.cpp  screen_renderer.h  subtitles.cpp  subtitles.h
playback/control/: command.h  system_control_state.h  transport.h
playback/debug/: lines.h
playback/frame/: refresh.h
playback/framebuffer/: mini_player_tui.cpp  playback_framebuffer_presenter.cpp  playback_framebuffer_presenter.h  playback_framebuffer_video_pipeline.cpp  playback_framebuffer_video_pipeline.h  playback_mini_player_tui.cpp  playback_mini_player_tui.h  playback_window_presenter.cpp  playback_window_presenter.h  presenter.cpp  presenter.h  video_pipeline.cpp  video_pipeline.h  window_presenter.cpp  window_presenter.h
playback/input/: input_action.h  shortcut_types.h  shortcuts.h
playback/media/: artwork_catalog.cpp  artwork_catalog.h  metadata_catalog.cpp  metadata_catalog.h  track_catalog.cpp
playback/notification_area/: controls.cpp  controls.h
playback/overlay/: overlay.cpp  overlay.h  playback_overlay.cpp  playback_overlay.h  playback_subtitle_effects.cpp  playback_subtitle_effects.h  subtitle_effects.cpp  subtitle_effects.h
playback/render/: playback_frame_output.h
playback/session/: bootstrap.cpp  bootstrap.h  core.cpp  core.h  file_drop.cpp  file_drop.h  handoff.cpp  handoff.h  host.cpp  host.h  input.cpp  input.h  log.cpp  loop.cpp  loop.h  output.cpp  output.h  playback_presentation_policy.h  playback_session.cpp  playback_session.h  playback_session_bootstrap.cpp  playback_session_bootstrap.h  playback_session_core.cpp  playback_session_core.h  playback_session_file_drop.cpp  playback_session_file_drop.h  playback_session_handoff.cpp  playback_session_handoff.h  playback_session_host.cpp  playback_session_host.h  playback_session_input.cpp  playback_session_input.h  playback_session_log.cpp  playback_session_log.h  playback_session_loop.cpp  playback_session_loop.h  playback_session_output.cpp  playback_session_output.h  playback_session_presentation.cpp  playback_session_presentation.h  (+17 more)
playback/system_media_transport/: controls.cpp  controls.h  host_window.cpp
playback/video/: CMakeLists.txt  asciiart_gpu.cpp  audio_clock_reacquire.cpp  audio_output_clock_source.cpp  audio_output_clock_source.h  audio_output_timeline.cpp  audio_output_timeline.h  audio_track_switch_timeline.cpp  audio_track_switch_timeline.h  control_events.h  decoder.cpp  decoder.h  frame_cursor.cpp  frame_cursor.h  frame_step.h  frame_step_seek.cpp  frame_step_seek.h  frame_step_seek_plan.h  luminance_stats.cpp  main_clock.cpp  playback.h  playback_clock.cpp  playback_clock.h  playback_main_clock.cpp  playback_main_clock.h  playback_serial_control.cpp  playback_serial_control.h  playback_state_machine.cpp  playback_state_machine.h  playback_state_policy.cpp  playback_state_policy.h  playback_sync.cpp  playback_sync.h  player.cpp  (+32 more)
tui/: CMakeLists.txt  audio_mini_player.cpp  audio_mini_player.h  audio_picture_in_picture_window.cpp  audio_picture_in_picture_window.h  browser_grid_index.cpp  browser_grid_index.h  consoleinput.cpp  consoleinput.h  consolescreen.cpp  consolescreen.h  input_file_drop.cpp  input_file_drop.h  picture_in_picture_window.cpp  picture_in_picture_window.h  playback_drop_route.cpp  playback_drop_route.h  playback_route.cpp  playback_route.h  shortcut_match.h  terminal_cell_metrics.cpp  terminal_cell_metrics.h  terminal_input_sequence.cpp  terminal_input_sequence.h  tui.cpp  tui.h  tui_export.cpp  tui_export.h  videowindow_tui.cpp
(+407 files in other folders)
